# synthea_api_fastapi

./: .coveragerc  .dockerignore  .gitignore  Makefile  docker-compose.yml  dockerfile  dump.sql  pyproject.toml  readme.md
examples/: Aaron697_Welch179_799ff48f-934b-3e47-f3ea-9b0edaa43c93.xml  Abbey813_Gleichner915_6be81c91-7995-c715-f1d4-48862119eecd.xml  Adelle43_Gayle448_Krajcik437_ff02f2eb-05f8-8ffe-8957-476c04fe5c22.xml  Akilah516_Grady603_737f0a56-c3c7-966f-840d-b211702a45ed.xml  Christoper325_Nienow652_1b14801b-370f-11bf-4f11-440324f9f228.xml
synthea/: app.py  main.py
synthea/core/: database.py  dependencies.py  security.py  settings.py
synthea/core/models/: __init__.py  base.py  patient.py  user.py
synthea/core/schemas/: patient.py  user.py
synthea/tests/: conftest.py  utils.py
synthea/tests/core/: test_security.py
synthea/tests/factories/: base.py  patient.py  user.py
synthea/tests/mock/: mock_input_file_invalid_patient.xml
synthea/tests/v1/: test_main.py
synthea/tests/v1/endpoints/: test_auth.py  test_patient.py  test_user.py
synthea/utils/: files.py
synthea/v1/: main.py
synthea/v1/endpoints/: auth.py  patient.py  user.py
synthea/v1/repo/: patient.py  user.py
synthea/v1/services/: patient_services.py  user_services.py
